--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
+    "@yaireo/tagify": "3.1.0",
     "autoprefixer": "^10.4.7",
     "daisyui": "^2.14.3",
     "esbuild": "^0.14.38",
